--- a/MonoDragons.Core/MonoDragons.Core.csproj
+++ b/MonoDragons.Core/MonoDragons.Core.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Common\Rng.cs" />
     <Compile Include="Common\Subject.cs" />
     <Compile Include="Common\SubscriptionAction.cs" />
+    <Compile Include="EngimaDragons\LogoScene.cs" />
     <Compile Include="Engine\Hack.cs" />
     <Compile Include="Engine\IVisualAutomaton.cs" />
     <Compile Include="Navigation\INavigation.cs" />
@@ -121,7 +122,11 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="Content\Images\Logo\enigmadragons.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
