--- a/YouReign/YouReign.csproj
+++ b/YouReign/YouReign.csproj
@@ -40,6 +40,7 @@
   <ItemGroup>
     <Compile Include="NewFolder1\ChatBox.cs" />
     <Compile Include="NewFolder1\DialogueMessage.cs" />
+    <Compile Include="NewFolder1\IfMouseIsClicked.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scenes\DarkGardenScene.cs" />
