--- a/YouReign/YouReign.csproj
+++ b/YouReign/YouReign.csproj
@@ -100,6 +100,12 @@
     <Content Include="Content\Images\UI\dialoguebox.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Content\Images\UI\optionbox-hover.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\Images\UI\optionbox.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Content\Images\UI\portraitbackground.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
