--- a/YouReign/YouReign.csproj
+++ b/YouReign/YouReign.csproj
@@ -62,6 +62,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\Images\Backgrounds\castleexplosion.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Content\Images\Backgrounds\darkgarden.jpg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
